config/deploy/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: se498-staging
  name: rails-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rails
  ports:
    - name: api-port
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: se498-staging
  name: react-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: react
  ports:
    - name: web-port
      port: 80
      targetPort: 5000
