config/deploy/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: se498-staging
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: staging.quartiledocs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: react-cluster-ip-service
              servicePort: 80
    - host: quartiledocs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: react-cluster-ip-service
              servicePort: 80
    - host: api.quartiledocs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: rails-cluster-ip-service
              servicePort: 80
